Create Admin Profile Table
